--- a/index.html
+++ b/index.html
@@ -3,137 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Nguyen - Leading Hand Resume</title>
+    <title>Peter Nguyen - Resume</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            margin: 20px;
-            padding: 0;
-            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            background-color: #f9f9f9;
             color: #333;
         }
-        header {
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
             text-align: center;
-            margin-bottom: 20px;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-        header p {
-            font-size: 1.2em;
-            color: #555;
-        }
-        section {
-            margin-bottom: 30px;
         }
         h2 {
-            font-size: 1.8em;
-            border-bottom: 2px solid #333;
+            font-size: 1.8rem;
+            border-bottom: 2px solid #3498db;
             padding-bottom: 5px;
-            margin-bottom: 15px;
+            margin-top: 20px;
         }
-        h3 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-        h4 {
-            font-size: 1.3em;
-            margin-bottom: 10px;
+        .contact-info {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 1.1rem;
             color: #555;
         }
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
+        .contact-info p {
+            margin: 5px 0;
         }
-        footer {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 0.9em;
-            color: #777;
+        .contact-info a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .section ul li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        .section ul li::before {
+            content: "•";
+            color: #3498db;
+            font-size: 1.2rem;
+            position: absolute;
+            left: 0;
+            top: -2px;
+        }
+        .references a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        .references a:hover {
+            text-decoration: underline;
+        }
+        .key-achievements {
+            background-color: #ecf0f1;
+            padding: 15px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .key-achievements h4 {
+            margin-top: 0;
+            color: #2c3e50;
+        }
+        .references {
+            background-color: #ecf0f1;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        .references h2 {
+            border-bottom: none;
+        }
+        .job-title {
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+        .job-duration {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 10px;
+        }
+        .job-details {
+            margin-left: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Peter Nguyen</h1>
-        <p>M: 0434 958 265 | E: nguyen.peter77@gmail.com | Moorebank NSW 2170</p>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Peter Nguyen</h1>
+            <div class="contact-info">
+                <p>M: 0434 958 265 | E: <a href="mailto:nguyen.peter77@gmail.com">nguyen.peter77@gmail.com</a> | Moorebank NSW 2170</p>
+            </div>
+        </header>
 
-    <section id="summary">
-        <h2>Professional Summary</h2>
-        <p>I am an absolute asset to anyone that believes in me and takes me on. I’m a reliable and physically fit construction professional with 5+ years of experience in site supervision, machinery operation, and team leadership.</p>
-        <p>Proven ability to coordinate crews, ensure safety compliance, and meet project deadlines. Skilled in operating telehandlers, hoists, and traffic control systems. Own tool kit, reliable vehicle, and available to start immediately. Work references available.</p>
-    </section>
+        <section class="section">
+            <h2>Summary</h2>
+            <ul>
+                <li>I’m a reliable and physically fit construction professional with 5+ years of experience in site supervision, machinery operation, and team leadership.</li>
+                <li>Proven ability to coordinate crews, ensure safety compliance, and meet project deadlines.</li>
+                <li>Skilled in operating telehandlers, hoists, and traffic control systems.</li>
+                <li>Own tool kit, reliable vehicle, and available to start immediately.</li>
+                <li>Highly skilled and experienced in troubleshooting all kinds of minor and major issues, difficulties, and problems.</li>
+                <li>An absolute valuable 'Asset' to have onsite.</li>
+            </ul>
+        </section>
 
-    <section id="certifications">
-        <h2>Tickets, Licences and Certifications</h2>
-        <ul>
-            <li>NSW White Card</li>
-            <li>TSiA Trained Operator – Gold Card – Telehandler License</li>
-            <li>High-Risk Work License & Certificate II in Rigging</li>
-            <li>Occupational First Aid Certificate</li>
-            <li>Licence to Operate a Personnel and Material Hoist</li>
-            <li>Electrical Spotter’s Ticket</li>
-            <li>Traffic Controller & Implementer Certification</li>
-            <li>Safety Access the Rail Corridor – Statement of Attainment - RfW card (RISi)</li>
-            <li>Carry Out Manual Handling Tasks - Statement of Attainment</li>
-            <li>Asbestos Awareness in the Workplace – Certificate of Completion</li>
-            <li>Silica Awareness – Completion Certificate</li>
-            <li>Drug and Alcohol Awareness – Certificate of Completion</li>
-            <li>NSW Driver Licence and own vehicle</li>
-        </ul>
-    </section>
+        <section class="section">
+            <h2>Tickets, Licences and Certifications</h2>
+            <ul>
+                <li>NSW White Card</li>
+                <li>TSiA Trained Operator – Gold Card – Telehandler License</li>
+                <li>High-Risk Work License & Certificate II in Rigging</li>
+                <li>Occupational First Aid Certificate</li>
+                <li>Licence to Operate a Personnel and Material Hoist</li>
+                <li>Electrical Spotter’s Ticket</li>
+                <li>Traffic Controller & Implementer Certification</li>
+                <li>Safety Access the Rail Corridor – Statement of Attainment - RfW card (RISi)</li>
+                <li>Carry Out Manual Handling Tasks - Statement of Attainment</li>
+                <li>Asbestos Awareness in the Workplace – Certificate of Completion</li>
+                <li>Silica Awareness – Completion Certificate</li>
+                <li>Drug and Alcohol Awareness – Certificate of Completion</li>
+                <li>NSW Driver Licence and own vehicle</li>
+            </ul>
+        </section>
 
-    <section id="experience">
-        <h2>Experience</h2>
-        <h3>Zenith Workforce Labour Hire, Bella Vista</h3>
-        <h4>Lendlease Sydney - Leading Hand</h4>
-        <p><strong>From:</strong> January 2023 - August 2024</p>
-        <ul>
-            <li>Supervised and coordinated crews of up to 12 workers, ensuring efficient completion of daily tasks and adherence to project timelines.</li>
-            <li>Conducted daily pre-start meetings to reinforce safety protocols, resulting in zero number of safety incidents during my tenure.</li>
-            <li>Liaised with site managers, engineers, and subcontractors to streamline workflows and meet critical deadlines.</li>
-            <li>Trained and mentored 10+ new team members on safe equipment operation and site procedures.</li>
-            <li>Operated and maintained machinery, including telehandlers, personnel & materials hoists, ensuring optimal performance, safety and efficiency.</li>
-            <li>Conducted traffic control duties, maintaining compliance with NSW traffic management standards.</li>
-            <li>Created daily worksheet plan for the team to follow enduring job allocation and high productivity resulting in project progression and completion.</li>
-        </ul>
-        <h4>Key Achievements:</h4>
-        <ul>
-            <li>Successfully led a team of 12 workers to complete the final handover of the Sydney Metro Martin Place ahead of schedule.</li>
-            <li>Implemented safety improvements that reduced workplace incidents by 89%.</li>
-            <li>Trained and inducted all the new laborers, improving team efficiency and safety compliance.</li>
-            <li>Worked closely with the engineers to ensure project progression and them to final completion and handover.</li>
-            <li>Completed final defects and faults for the station before finally handing over to the NSW Government.</li>
-            <li>I was the only none Lendlease employee to be in the “Lendlease project completion team photograph” before the final handover was achieved. A very proud moment and achievement for me as it was the first none Lendlease employee to complete a Lendlease project.</li>
-        </ul>
+        <section class="section">
+            <h2>Experience</h2>
+            <div class="job">
+                <div class="job-title">Zenith Workforce Labour Hire, Bella Vista</div>
+                <div class="job-duration">Lendlease Sydney - Leading Hand | January 2023 - August 2024</div>
+                <div class="job-details">
+                    <p><strong>Previous roles:</strong> Cleaner, Hoist Operator, Traffic Controller, Telehandler duties.</p>
+                    <ul>
+                        <li>Supervised and coordinated crews of up to 12 workers, ensuring efficient completion of daily tasks and adherence to project timelines.</li>
+                        <li>Conducted daily pre-start meetings to reinforce safety protocols, resulting in zero number of safety incidents during my tenure.</li>
+                        <li>Liaised with site managers, engineers, and subcontractors to streamline workflows and meet critical deadlines.</li>
+                        <li>Trained and mentored 10+ new team members on safe equipment operation and site procedures.</li>
+                        <li>Operated and maintained machinery, including telehandlers, personnel & materials hoists, ensuring optimal performance, safety and efficiency.</li>
+                        <li>Conducted traffic control duties, maintaining compliance with NSW traffic management standards.</li>
+                        <li>Created daily worksheet plan for the team to follow ensuring job allocation and high productivity resulting in project progression and completion.</li>
+                    </ul>
+                    <div class="key-achievements">
+                        <h4>Key Achievements:</h4>
+                        <ul>
+                            <li>Successfully led a team of 12 workers to complete the final handover of the Sydney Metro Martin Place ahead of schedule.</li>
+                            <li>Implemented safety improvements that reduced workplace incidents by 89%.</li>
+                            <li>Trained and inducted all the new laborers, improving team efficiency and safety compliance.</li>
+                            <li>Worked closely with the engineers to ensure project progression and them to final completion and handover.</li>
+                            <li>Completed final defects and faults for the station before finally handing over to the NSW Government.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-        <h3>Zenith Workforce Labour Hire, Bella Vista</h3>
-        <h4>Multiplex | Mirvac | Bulldcorp | BUILT – Labourer</h4>
-        <p><strong>From:</strong> March 2020 - December 2023</p>
-        <ul>
-            <li>Supported site preparation, material handling, and clean-up, contributing to efficient project execution.</li>
-            <li>Operated power tools and machinery for demolition, concreting, and steel reinforcement tasks.</li>
-            <li>Assisted tradespeople by preparing materials and setting up work areas, ensuring seamless workflow.</li>
-            <li>Consistently adhered to WHS guidelines, maintaining a strong safety record.</li>
-        </ul>
-    </section>
+            <div class="job">
+                <div class="job-title">Zenith Workforce Labour Hire, Bella Vista</div>
+                <div class="job-duration">Multiplex | Mirvac | Bulldcorp | BUILT – Labourer | March 2020 - December 2023</div>
+                <div class="job-details">
+                    <ul>
+                        <li>Supported site preparation, material handling, and clean-up, contributing to efficient project execution.</li>
+                        <li>Operated power tools and machinery for demolition, concreting, and steel reinforcement tasks.</li>
+                        <li>Assisted tradespeople by preparing materials and setting up work areas, ensuring seamless workflow.</li>
+                        <li>Consistently adhered to WHS guidelines, maintaining a strong safety record.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-    <section id="references">
-        <h2>References</h2>
-        <p><strong>References are available upon request from:</strong></p>
-        <ul>
-            <li>Jesse Hollis (Senior Site Supervisor - Lendlease)</li>
-            <li>Dean Robinson (Senior Site Manager for Sydney Metro Martin Place - Lendlease)</li>
-            <li>Mark Dunn (Senior Engineer in charge of the Sydney Metro Project MP – Lendlease)</li>
-        </ul>
-        <p>These Supervisors I did work closely with on Sydney Metro MP construction project. They oversaw my leadership and operational skills at work, which in turn produced high standard results for the project.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Peter Nguyen. All rights reserved.</p>
-    </footer>
+        <section class="section references">
+            <h2>References</h2>
+            <p><strong>References are available upon request from:</strong></p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/jesse-hollis-566581b2/" target="_blank">Jesse Hollis (Senior Site Supervisor - Lendlease)</a></li>
+                <li><a href="https://www.linkedin.com/in/dean-robinson-066523a2/?originalSubdomain=au" target="_blank">Dean Robinson (Senior Site Manager for Sydney Metro Martin Place - Lendlease)</a></li>
+                <li><a href="https://www.linkedin.com/in/mark-s-dunn/?originalSubdomain=au" target="_blank">Mark Dunn (Senior Construction Manager in charge of the Sydney Metro Project MP – Lendlease)</a></li>
+            </ul>
+            <p>These Supervisors I did work closely with on Sydney Metro MP construction project. They oversaw my leadership and operational skills at work, which in turn produced high standard results for the project.</p>
+        </section>
+    </div>
 </body>
 </html>
