--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
         .job-details {
             margin-left: 20px;
         }
+        .download-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .download-button:hover {
+            background-color: #2980b9;
+        }
     </style>
 </head>
 <body>
@@ -119,6 +132,11 @@
                 <p>M: 0434 958 265 | E: <a href="mailto:nguyen.peter77@gmail.com">nguyen.peter77@gmail.com</a> | Moorebank NSW 2170</p>
             </div>
         </header>
+
+        <!-- Download Button -->
+        <a href="Leading_Hand_Resume_document.docx" download="Peter_Nguyen_Resume.docx" class="download-button">
+            Download Resume
+        </a>
 
         <section class="section">
             <h2>Summary</h2>
