--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
         .job-details {
             margin-left: 20px;
         }
+        .download-button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
         .download-button {
             display: inline-block;
-            margin-top: 20px;
             padding: 10px 20px;
             background-color: #3498db;
             color: #fff;
@@ -133,10 +136,12 @@
             </div>
         </header>
 
-        <!-- Download Button -->
-        <a href="Leading_Hand_Resume_document.docx" download="Peter_Nguyen_Resume.docx" class="download-button">
-            Download Resume
-        </a>
+        <!-- Centered Download Button -->
+        <div class="download-button-container">
+            <a href="Leading_Hand_Resume_document.docx" download="Peter_Nguyen_Resume.docx" class="download-button">
+                Download Resume
+            </a>
+        </div>
 
         <section class="section">
             <h2>Summary</h2>
